Set the default route + renamed directory 'navigation' to 'shared'
default route - directory renamed - routerLink syntax improvement

--- a/src/app/shared/header-nav/header-nav.component.html
+++ b/src/app/shared/header-nav/header-nav.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar color="primary">
     <span>Secretariat Politehnica</span>
     <span class="example-spacer"></span>
-    <a mat-raised-button href="#" routerLink="/add">Add</a>
-    <a mat-raised-button href="#" routerLink="/all">All</a>
+    <a mat-raised-button [routerLink]="['/add']">Add</a>
+    <a mat-raised-button [routerLink]="['/all']">All</a>
   </mat-toolbar>
 </p>
